fix: 1.19.2 fake player info packet issue